mans go orders workin walahi ahlie fam

--- a/src/scss/core/_custom-variables.scss
+++ b/src/scss/core/_custom-variables.scss
@@ -38,7 +38,7 @@ $vimeo: #aad450;
 // Navbar
 
 $navbar-height:                     55px;
-$navbar-bg:                         #fff;
+$navbar-bg:                         #059361;
 $navbar-border: (
     bottom: (
         size:                       1px,
@@ -58,7 +58,7 @@ $navbar-brand-border: (
     )
 );
 
-$navbar-color:                      rgba(0,0,0,.3);
+$navbar-color:                      rgba(255,255,255, 0.9);
 $navbar-hover-color:                rgba(0,0,0,.6);
 $navbar-active-color:               rgba(0,0,0,.8);
 $navbar-disabled-color:             rgba(0,0,0,.15);
