--- a/src/app/pages/login.component.html
+++ b/src/app/pages/login.component.html
@@ -6,24 +6,19 @@
                     <div class="card-block">
                         <h1>Login</h1>
                         <p class="text-muted">Sign In to your account</p>
-                        <div class="input-group m-b-1">
-                            <span class="input-group-addon"><i class="icon-user"></i>
-                            </span>
-                            <input type="text" class="form-control" placeholder="Username">
-                        </div>
-                        <div class="input-group m-b-2">
-                            <span class="input-group-addon"><i class="icon-lock"></i>
-                            </span>
-                            <input type="password" class="form-control" placeholder="Password">
-                        </div>
-                        <div class="row">
-                            <div class="col-xs-6">
-                                <button type="button" class="btn btn-primary p-x-2">Login</button>
-                            </div>
-                            <div class="col-xs-6 text-xs-right">
-                                <button type="button" class="btn btn-link p-x-0">Forgot password?</button>
-                            </div>
-                        </div>
+                        <form [formGroup]="loginForm" (ngSubmit)="login()">
+                          <div class="input-group m-b-1">
+                              <span class="input-group-addon">@</span>
+                              <input type="text" class="form-control" formControlName="email" placeholder="Email">
+                          </div>
+                          <div class="input-group m-b-1">
+                              <span class="input-group-addon">
+                                <i class="icon-lock"></i>
+                              </span>
+                              <input type="password" class="form-control" formControlName="password" placeholder="Password">
+                          </div>
+                          <button type="button" class="btn btn-block btn-success" (click)="login()">Login</button>
+                        </form>
                     </div>
                 </div>
                 <div class="card card-inverse card-primary p-y-3 hidden-md-down" style="width:44%">
@@ -31,7 +26,7 @@
                         <div>
                             <h2>Sign up</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                            <button type="button" class="btn btn-primary active m-t-1">Register Now!</button>
+                            <button type="button" class="btn btn-primary active m-t-1" routerLinkActive="active" [routerLink]="['/pages/register']">Register Now!</button>
                         </div>
                     </div>
                 </div>
