cleaning up unnecessaries

--- a/src/app/layouts/full-layout.component.html
+++ b/src/app/layouts/full-layout.component.html
@@ -78,7 +78,7 @@
             <li class="nav-item">
                 <a class="nav-link" routerLinkActive="active" [routerLink]="['/orders']"><i class="icon-bag"></i> Orders </a>
             </li>
-            <li class="nav-item nav-dropdown" routerLinkActive="open">
+            <!-- <li class="nav-item nav-dropdown" routerLinkActive="open">
                 <a class="nav-link nav-dropdown-toggle" href="#"><i class="icon-puzzle"></i> Components</a>
                 <ul class="nav-dropdown-items">
                     <li class="nav-item">
@@ -111,14 +111,14 @@
                         <a class="nav-link" routerLinkActive="active" [routerLink]="['/icons/simple-line-icons']"><i class="icon-star"></i> Simple Line Icons</a>
                     </li>
                 </ul>
+            </li> -->
+            <li class="nav-item">
+                <a class="nav-link" routerLinkActive="active" [routerLink]="['/menu']"><i class="icon-calculator"></i> Menu </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLinkActive="active" [routerLink]="['/widgets']"><i class="icon-calculator"></i> Widgets <span class="tag tag-info">NEW</span></a>
+                <a class="nav-link" routerLinkActive="active" [routerLink]="['/analytics']"><i class="icon-pie-chart"></i> Analytics <span class="tag tag-info">NEW</span></a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" routerLinkActive="active" [routerLink]="['/charts']"><i class="icon-pie-chart"></i> Charts</a>
-            </li>
-            <li class="divider"></li>
+            <!-- <li class="divider"></li>
             <li class="nav-title">
                 Extras
             </li>
@@ -138,7 +138,7 @@
                         <a class="nav-link" routerLinkActive="active" [routerLink]="['/pages/500']"><i class="icon-star"></i> Error 500</a>
                     </li>
                 </ul>
-            </li>
+            </li> -->
 
         </ul>
     </nav>
