--- a/src/app/pages/login.component.html
+++ b/src/app/pages/login.component.html
@@ -25,7 +25,7 @@
                     <div class="card-block text-xs-center">
                         <div>
                             <h2>Sign up</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            <p>Signup with Nimbusfly Technologies to get access to our entire suite of applications, networks, and marketplaces.</p>
                             <button type="button" class="btn btn-primary active m-t-1" routerLinkActive="active" [routerLink]="['/pages/register']">Register Now!</button>
                         </div>
                     </div>
