--- a/src/app/layouts/full-layout.component.html
+++ b/src/app/layouts/full-layout.component.html
@@ -1,35 +1,29 @@
 <header class="navbar">
     <div class="container-fluid">
         <button class="navbar-toggler hidden-lg-up" type="button" mobile-nav-toggle>&#9776;</button>
-        <a class="navbar-brand" href="#"></a>
+        <a class="navbar-brand" href="#" routerLinkActive="active" [routerLink]="['/dashboard']"></a>
 
         <ul class="nav navbar-nav hidden-md-down">
             <li class="nav-item">
                 <a class="nav-link navbar-toggler sidebar-toggle" href="#">&#9776;</a>
             </li>
-            <li class="nav-item p-x-1">
-                <a class="nav-link" href="#">Dashboard</a>
-            </li>
-            <li class="nav-item p-x-1">
-                <a class="nav-link" href="#">Users</a>
-            </li>
-            <li class="nav-item p-x-1">
-                <a class="nav-link" href="#">Settings</a>
+            <li class="nav-item p-x-1" *ngIf="user.role == 'SUPER'">
+                <a class="nav-link" routerLinkActive="active" [routerLink]="['/pages/register']">Register</a>
             </li>
         </ul>
         <ul class="nav navbar-nav pull-right hidden-md-down">
             <li class="nav-item">
                 <a class="nav-link" href="#"><i class="icon-bell"></i><span class="tag tag-pill tag-danger">5</span></a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link" href="#"><i class="icon-list"></i></a>
-            </li>
-            <li class="nav-item">
+            </li> -->
+            <!-- <li class="nav-item">
                 <a class="nav-link" href="#"><i class="icon-location-pin"></i></a>
-            </li>
+            </li> -->
             <li class="nav-item dropdown" dropdown (onToggle)="toggled($event)">
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" dropdownToggle>
-                    <img src="img/alair-logo.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
+                    <img src="assets/img/avatars/7.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
                     <span class="hidden-md-down">Alair</span>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" dropdownMenu aria-labelledby="simple-dropdown">
@@ -100,7 +94,7 @@
                         <a class="nav-link" routerLinkActive="active" [routerLink]="['/components/tables']"><i class="icon-puzzle"></i> Tables</a>
                     </li>
                 </ul>
-            </li>
+            </li> -->
             <li class="nav-item nav-dropdown" routerLinkActive="open">
                 <a class="nav-link nav-dropdown-toggle" href="#"><i class="icon-star"></i> Icons</a>
                 <ul class="nav-dropdown-items">
@@ -111,7 +105,7 @@
                         <a class="nav-link" routerLinkActive="active" [routerLink]="['/icons/simple-line-icons']"><i class="icon-star"></i> Simple Line Icons</a>
                     </li>
                 </ul>
-            </li> -->
+            </li>
             <li class="nav-item">
                 <a class="nav-link" routerLinkActive="active" [routerLink]="['/menu']"><i class="icon-calculator"></i> Menu </a>
             </li>
@@ -410,35 +404,6 @@
                 </div>
 
                 <hr>
-                <h6>System Utilization</h6>
-
-                <div class="text-uppercase m-b-q m-t-2">
-                    <small><b>CPU Usage</b>
-                    </small>
-                </div>
-                <progress class="progress progress-xs progress-info m-a-0" value="25" max="100">25%</progress>
-                <small class="text-muted">348 Processes. 1/4 Cores.</small>
-
-                <div class="text-uppercase m-b-q m-t-h">
-                    <small><b>Memory Usage</b>
-                    </small>
-                </div>
-                <progress class="progress progress-xs progress-warning m-a-0" value="70" max="100">70%</progress>
-                <small class="text-muted">11444GB/16384MB</small>
-
-                <div class="text-uppercase m-b-q m-t-h">
-                    <small><b>SSD 1 Usage</b>
-                    </small>
-                </div>
-                <progress class="progress progress-xs progress-danger m-a-0" value="95" max="100">95%</progress>
-                <small class="text-muted">243GB/256GB</small>
-
-                <div class="text-uppercase m-b-q m-t-h">
-                    <small><b>SSD 2 Usage</b>
-                    </small>
-                </div>
-                <progress class="progress progress-xs progress-success m-a-0" value="10" max="100">10%</progress>
-                <small class="text-muted">25GB/256GB</small>
             </div>
         </tab>
     </tabset>
@@ -447,8 +412,5 @@
 <footer class="footer">
     <span class="text-left">
         <a href="http://www.nimbusfly.co">Nimbus</a> &copy; 2016 NimbusFly.
-    </span>
-    <span class="pull-right">
-        Powered by <a href="http://coreui.io">CoreUI</a>
     </span>
 </footer>
